export enum TabScreens {
  HOME = 'Home',
  BLOCKLIST = 'Blocklist',
  SETTINGS = 'Settings',
  STRICT_MODE = 'Strict Mode',
}
