...
          .map((bl) => bl.name)
          .join(', ')

  return (
    <>
      <View style={styles.param}>
        <Text style={styles.label}>Blocklists</Text>
        <Pressable
          onPress={() => setIsModalOpen(true)}
          accessibilityRole="button"
        >
          <Text style={styles.option}>{displayText}</Text>
        </Pressable>
...
