...
          setFieldValue={setFieldValue}
          handleChange={handleChange}
        />
      </TiedSBlurView>

      <TiedSButton
        text={'START'}
        onPress={() => {
          handleSubmit()
          props.navigation.navigate(HomeStackScreens.MAIN_HOME)
        }}
      />
    </View>
...
